--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./server/webServer",
-    "test": "mocha -u tdd"
+    "test": "mocha -u bdd"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jordancollings98/FYP-jordan-collings"
   },
   "keywords": [
-    "Security"
+    "Cyber Security",
+    "LockDown",
+    "Lockdown"
   ],
   "author": "Jordan Collings",
   "license": "ISC",
@@ -35,5 +37,8 @@
     "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7",
     "pug": "^2.0.4"
+  },
+  "devDependencies": {
+    "request": "^2.88.2"
   }
 }
