--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Lockdown"
   ],
   "author": "Jordan Collings",
-  "license": "ISC",
+  "license": "CC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
